--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,81 +1,69 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "overrides": [
-	{ 
-		"env": { "browser": true, "es2021": true},
-		"files": ["**/*.ts", "**/*.tsx"],
-		"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-		"parser": "@typescript-eslint/parser",
-		"plugins": ["@typescript-eslint"],
-		"parserOptions": {
-			"ecmaFeatures": { "jsx": true },
-			"ecmaVersion": "latest",
-			"sourceType": "module",
-			"project": "./tsconfig.json"
-		 },
-		 "rules": {
-			"@typescript-eslint/no-non-null-assertion": "error"
+	"env": {
+	  "browser": true,
+	  "es2021": true
+	},
+	"ignorePatterns": ["node_modules", "dist", "build"],
+	"extends": [
+	  "plugin:react/recommended",
+	  "eslint:recommended",
+	  "plugin:@typescript-eslint/recommended",
+	  "airbnb",
+	  "prettier"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+	  "ecmaFeatures": { "jsx": true },
+	  "ecmaVersion": "latest",
+	  "sourceType": "module",
+	  "project": "./tsconfig.json"
+	},
+	"plugins": ["react", "@typescript-eslint", "prettier"],
+	"rules": {
+	  "import/extensions": [
+		 "error",
+		 "ignorePackages",
+		 {
+			"js": "never",
+			"jsx": "never",
+			"ts": "never",
+			"tsx": "never"
 		 }
+	  ],
+	  "prettier/prettier": "error",
+	  "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx", ".ts"] }],
+	  "quotes": ["error", "single"],
+	  "semi": ["error", "never"],
+	  "react/prop-types": 0,
+	  "import/no-unresolved": [2, { "caseSensitive": false }],
+	  "import/prefer-default-export": "off",
+	  "linebreak-style": [0, "unix"],
+	  "react/forbid-prop-types": 0,
+	  "react/jsx-props-no-spreading":0,
+	  "react/destructuring-assignment": 0,
+	  "react/prefer-stateless-function": 0,
+	  "react/static-property-placement": 0,
+	  "react/state-in-constructor": 0,
+	  "class-methods-use-this": 0,
+	  "no-plusplus": 0,
+	  "no-param-reassign": 0,
+	  "no-console": "off",
+	  "@typescript-eslint/no-unused-vars": "error",
+	  "import/order": [
+		 2,
+		 {
+			"groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+			"newlines-between": "always"
+		 }
+	  ]
+	},
+	"settings": {
+	  "version": "detect",
+	  "import/resolver": {
+		 "node": {
+			"extensions": [".js", ".jsx", ".ts", ".tsx"],
+			"moduleDirectory": ["node_modules", "src/"]
+		 }
+	  }
 	}
-  ],
-  "ignorePatterns": ["node_modules", "dist", "build"],
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "requireConfigFile": false,
-    "babelOptions": {
-      "presets": ["@babel/preset-react"]
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react", "prettier"],
-  "rules": {
-	"import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-   ],
-    "prettier/prettier": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".ts", ".jsx", ".tsx"] }],
-    "quotes": ["error", "single"],
-    "semi": ["error", "never"],
-    "react/prop-types": 0,
-    "import/no-unresolved": [2, { "caseSensitive": false }],
-    "linebreak-style": [0, "unix"],
-    "react/forbid-prop-types": 0,
-    "react/destructuring-assignment": 0,
-    "react/prefer-stateless-function": 0,
-    "react/static-property-placement": 0,
-    "react/state-in-constructor": 0,
-    "class-methods-use-this": 0,
-    "no-plusplus": 0,
-    "react/jsx-props-no-spreading": "off",
-    "no-param-reassign": 0,
-    "no-console": "off",
-    "import/order": [
-      2,
-      {
-        "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-        "newlines-between": "always"
-      }
-    ]
-  },
-  "settings": {
-    "version": "detect",
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"],
-        "moduleDirectory": ["node_modules", "src/"]
-      }
-    }
-  }
-}
+ }
