--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "@babel/eslint-parser": "^7.19.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
@@ -75,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "typed-scss-modules": "^7.1.0"
   }
 }
