--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.{js,jsx, ts, tsx}": [
+    "**/*.{ts,tsx}": [
       "npm run lint:fix",
       "npm run format"
     ]
