--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "npm run lint:fix",
-      "npm run format"
-    ]
-  },
+	"**/*.{js,ts, jsx, tsx}": [
+	  "npm run lint:fix",
+	  "npm run format"
+	]
+ },
   "eslintConfig": {
     "extends": [
       "react-app",
